--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
     "axios": "^0.25.0",
-    "next": "^11.1.0",
+    "next": "12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.38.2",
