--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.0",
+    "@headlessui/react": "^1.7.10",
+    "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^1.0.4",
     "axios": "^0.25.0",
     "next": "12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.7.1",
     "sass": "^1.38.2",
     "swiper": "^6.7.5",
     "swr": "^1.2.0"
