--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@headlessui/react": "^1.7.10",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^1.0.4",
+    "@hookform/resolvers": "^2.9.11",
     "axios": "^0.25.0",
     "next": "12.0.0",
+    "postmark": "^3.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
     "sass": "^1.38.2",
     "swiper": "^6.7.5",
-    "swr": "^1.2.0"
+    "swr": "^1.2.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
