--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^1.0.4",
     "@hookform/resolvers": "^2.9.11",
     "axios": "^0.25.0",
+    "immutability-helper": "^3.1.1",
     "next": "12.0.0",
     "postmark": "^3.0.15",
     "react": "^17.0.2",
