--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
       "@/configs/*": ["configs/*"],
       "@/icons/*": ["icons/*"],
       "@/utils/*": ["utils/*"],
-      "@/styles/*": ["styles/*"]
+      "@/styles/*": ["styles/*"],
+      "@/data/*": ["data/*"]
     }
   }
 }
